<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fahed.developer.perfil_devandroid.MainActivityFragment"
    tools:showIn="@layout/activity_main">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true"
                android:background="@color/secondaryText"
                android:layout_margin="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ivItem1"
                            android:src="@mipmap/ic_lupa" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ivItem2"
                            android:src="@mipmap/ic_compartir" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="250dp"
                        android:id="@+id/ivPerfil"
                        android:src="@drawable/perfil"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_nombre"
                        android:id="@+id/tvNombre"
                        android:textColor="@color/primaryText"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_cargo"
                        android:id="@+id/tvCargo"
                        android:textColor="@color/secondaryText"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="19sp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ivUbicacion"
                            android:src="@mipmap/ic_ubicacion" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_ubicacion"
                            android:id="@+id/tvUbicacion"
                            android:textColor="@color/secondaryText"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ivAndroid"
                            android:src="@mipmap/ic_android"
                            android:layout_weight="5" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"

                            android:layout_weight="3"
                            android:gravity="center">


                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tv_SubItem_1"
                                    android:id="@+id/tvSubItem1"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tv_SubItem_6"
                                    android:id="@+id/tvSubItem2"
                                    android:layout_marginLeft="10dp"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tv_SubItem_3"
                                    android:id="@+id/tvSubItem3"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tv_SubItem_2"
                                    android:id="@+id/tvSubItem4"
                                    android:layout_marginLeft="10dp"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tv_SubItem_4"
                                    android:id="@+id/tvSubItem5"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tv_SubItem_5"
                                    android:id="@+id/tvSubItem6"
                                    android:layout_marginLeft="10dp"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>



</LinearLayout>
